--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/styled-components": "^5.1.12",
     "axios": "^0.21.1",
     "focus-trap-react": "^8.7.0",
     "react": "^17.0.2",
